tests/neg-custom-args/captures/i15116.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15116.scala:5:13 ----------------------------------------
5 |  val x = Foo(m)   // error
  |          ^^^^^^
  |          Found:    test.Foo{val m: (Bar.this.m² : test.STR^)}^{Bar.this.m²}
  |          Required: test.Foo
  |
  |          where:    ^  refers to a fresh root capability in the type of value m²
  |                    m  is a value in class Foo
  |                    m² is a value in class Bar
  |
  |
  |          Note that the expected type test.Foo
  |          is the previously inferred type of value x
  |          which is also the type seen in separately compiled sources.
  |          The new inferred type test.Foo{val m: (Bar.this.m : test.STR^)}^{Bar.this.m}
  |          must conform to this type.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15116.scala:7:13 ----------------------------------------
7 |  val x = Foo(m)   // error
  |          ^^^^^^
  |          Found:    test.Foo{val m: (Baz.this.m² : test.STR^)}^{Baz.this.m²}
  |          Required: test.Foo
  |
  |          where:    ^  refers to a fresh root capability in the type of value m²
  |                    m  is a value in class Foo
  |                    m² is a value in trait Baz
  |
  |
  |          Note that the expected type test.Foo
  |          is the previously inferred type of value x
  |          which is also the type seen in separately compiled sources.
  |          The new inferred type test.Foo{val m: (Baz.this.m : test.STR^)}^{Baz.this.m}
  |          must conform to this type.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15116.scala:9:13 ----------------------------------------
9 |  val x = Foo(m)   // error
  |          ^^^^^^
  |          Found:    test.Foo{val m: (Bar1.this.m² : test.STR^)}^{Bar1.this.m²}
  |          Required: test.Foo
  |
  |          where:    ^  refers to a fresh root capability in the type of value m²
  |                    m  is a value in class Foo
  |                    m² is a value in class Bar1
  |
  |
  |          Note that the expected type test.Foo
  |          is the previously inferred type of value x
  |          which is also the type seen in separately compiled sources.
  |          The new inferred type test.Foo{val m: (Bar1.this.m : test.STR^)}^{Bar1.this.m}
  |          must conform to this type.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15116.scala:11:13 ---------------------------------------
11 |  val x = Foo(m)   // error
   |          ^^^^^^
   |          Found:    test.Foo{val m: (Baz2.this.m² : test.STR^)}^{Baz2.this.m²}
   |          Required: test.Foo
   |
   |          where:    ^  refers to a fresh root capability in the type of value m²
   |                    m  is a value in class Foo
   |                    m² is a value in trait Baz2
   |
   |
   |          Note that the expected type test.Foo
   |          is the previously inferred type of value x
   |          which is also the type seen in separately compiled sources.
   |          The new inferred type test.Foo{val m: (Baz2.this.m : test.STR^)}^{Baz2.this.m}
   |          must conform to this type.
   |
   | longer explanation available when compiling with `-explain`
